@@ -77,6 +77,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #15163: Pydoc shouldn't list __loader__ as module data.
+
 - Issue #15471: Do not use mutable objects as defaults for
   importlib.__import__().
 
